@@ -1,5 +1,9 @@
 * Add derivations to retrieve column number density from column vmr.
 
+* Fixed issue in bin_spatial() where the weightfactor could be too high when
+  oversampling the input data. Grid cells that intersected with the data
+  polygon could end up with a weightfactor >1.0 (but <2.0).
+
 * Fixed issue where molar mass was incorrectly provided for the species with
   the shortest matching name. e.g. the molar mass of CO was returned for CO2
   and of NO for NO2. This impacts vmr <-> mmr conversions for BrO2, COF2, COS,
